--- a/recordlib/src/main/AndroidManifest.xml
+++ b/recordlib/src/main/AndroidManifest.xml
@@ -39,6 +39,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true">
         <activity
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:screenOrientation="portrait"
             android:theme="@style/RecorderVideo"
             android:name=".RecordVideoActivity"></activity>
     </application>
